# glacier-filemuncher

./: .gitignore  CMakeLists.txt  glacier-filemuncher.desktop  glacier-filemuncher.pro
rpm/: glacier-filemuncher.spec
src/: CMakeLists.txt  filetools.cpp  filetools.h  main.cpp  txtfilereader.cpp  txtfilereader.h
src/qml/: DetailViewSheet.qml  DirectoryPage.qml  FilePickerSheet.qml  InputSheet.qml  TextViewPage.qml  glacier-filemuncher.qml  glacier-filemuncher.qrc  main.qml
src/qml/api/: FileListDelegate.qml  FilePermissionIndicator.qml
translations/: glacier-filemuncher.ts  glacier-filemuncher_cs.ts  glacier-filemuncher_de.ts  glacier-filemuncher_fi.ts  glacier-filemuncher_fr.ts  glacier-filemuncher_pl.ts  glacier-filemuncher_ru.ts  glacier-filemuncher_uk.ts  glacier-filemuncher_vi.ts
